Inspector doesn't get focused when opened in dock mode https://bugs.webkit.org/show_bug.cgi?id=143030

Reviewed by Anders Carlsson.

The bug was caused by platformBringToFront and platformAttach calling makeFirstResponder on WKWebView,
which aren't intended to become the first responder. Fixed the bug by calling makeFirstResponder on the WKView
subview of the WKWebView, which is intended to be used as the first responder on behalf of the web view.

* UIProcess/mac/WebInspectorProxyMac.mm:
(WebKit::WebInspectorProxy::platformBringToFront):
(WebKit::WebInspectorProxy::platformAttach):


Canonical link: https://commits.webkit.org/161055@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@181927 268f45cc-cd09-0410-ab3c-d52691b4dbfc